--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
       <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Document</title>
+      <title>Contact me</title>
       </head>
       <body>
          <img          > 
          <h1>Shammi</h1>
+         <a>GitHub</a>
+         <a>Linkedin</a>
+         <a>X(formerly twitter)</a>
+         <a>Instagram</a>
          <button></button>
          <button></button>
          <button></button>
