--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       <body>
          <img          > 
          <h1>Shammi</h1>
-         <a>GitHub</a>
-         <a>Linkedin</a>
-         <a>X(formerly twitter)</a>
+         <a href="">GitHub</a>
+         <a href="">Linkedin</a>
+         <a href="">X(formerly twitter)</a>
          <a>Instagram</a>
          <button></button>
          <button></button>
