--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
          <img          > 
          <h1>Shammi</h1>
          <a href="">GitHub</a>
-         <a href="">Linkedin</a>
+         <a href="www.linkedin.com/in/shammi-udumalagala">Linkedin</a>
          <a href="">X(formerly twitter)</a>
          <a>Instagram</a>
          <button></button>
