--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <body>
          <img          > 
          <h1>Shammi</h1>
-         <a href="">GitHub</a>
+         <a href="https://github.com/shammi-udum">GitHub</a>
          <a href="www.linkedin.com/in/shammi-udumalagala">Linkedin</a>
          <a href="">X(formerly twitter)</a>
          <a>Instagram</a>
