--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          <h1>Shammi</h1>
          <a href="https://github.com/shammi-udum">GitHub</a>
          <a href="www.linkedin.com/in/shammi-udumalagala">Linkedin</a>
-         <a href="">X(formerly twitter)</a>
+         <a href="https://twitter.com/Shamwow25">X(formerly twitter)</a>
          <a>Instagram</a>
          <button></button>
          <button></button>
