--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
       <title>Contact me</title>
       </head>
       <body>
-         <img          > 
-         <h1>Shammi</h1>
-         <a href="https://github.com/shammi-udum">GitHub</a>
-         <a href="www.linkedin.com/in/shammi-udumalagala">Linkedin</a>
-         <a href="https://twitter.com/Shamwow25">X(formerly twitter)</a>
-         <a>Instagram</a>
+         <div class="profileImageContainer">  
+            <img          > 
+         </div>
+         <div class="profileNameContainer">
+            <h1>Shammi</h1>
+         </div>
+         <div class="profileLinksContainer">
+            <a href="https://github.com/shammi-udum">GitHub</a>
+            <a href="www.linkedin.com/in/shammi-udumalagala">Linkedin</a>
+            <a href="https://twitter.com/Shamwow25">X(formerly twitter)</a>
+            <a>Instagram</a>
+         </div>
          <button></button>
          <button></button>
          <button></button>
