--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="https://github.com/shammi-udum">GitHub</a>
             <a href="www.linkedin.com/in/shammi-udumalagala">Linkedin</a>
             <a href="https://twitter.com/Shamwow25">X(formerly twitter)</a>
-            <a>Instagram</a>
+            <a href="https://www.instagram.com/shammi_udu?igsh=bjZ0ZjNhZmIycmcw&utm_source=qr">Instagram</a>
          </div>
          <button></button>
          <button></button>
