--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       </head>
       <body>
          <div class="profileImageContainer">  
-            <img          > 
+            <img src="Profileimage.JPG" alt="Indian male with a suit on."> 
          </div>
          <div class="profileNameContainer">
             <h1>Shammi</h1>
