--- a/index.html
+++ b/index.html
@@ -14,10 +14,18 @@
             <h1>Shammi</h1>
          </div>
          <div class="profileLinksContainer">
-            <a href="https://github.com/shammi-udum">GitHub</a>
-            <a href="www.linkedin.com/in/shammi-udumalagala">Linkedin</a>
-            <a href="https://twitter.com/Shamwow25">X(formerly twitter)</a>
-            <a href="https://www.instagram.com/shammi_udu?igsh=bjZ0ZjNhZmIycmcw&utm_source=qr">Instagram</a>
+            <div>
+               <a href="https://github.com/shammi-udum">GitHub</a>
+            </div>
+            <div>
+               <a href="www.linkedin.com/in/shammi-udumalagala">Linkedin</a>
+            </div>
+            <div>
+               <a href="https://twitter.com/Shamwow25">X(formerly twitter)</a>
+            </div>
+            <div>
+               <a href="https://www.instagram.com/shammi_udu?igsh=bjZ0ZjNhZmIycmcw&utm_source=qr">Instagram</a>
+            </div>
          </div>
       </body>
 </html>
