--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                <a href="https://github.com/shammi-udum">GitHub</a>
             </div>
             <div>
-               <a href="www.linkedin.com/in/shammi-udumalagala">Linkedin</a>
+               <a href="https://www.linkedin.com/in/shammi-udumalagala/">Linkedin</a>
             </div>
             <div>
                <a href="https://twitter.com/Shamwow25">X(formerly twitter)</a>
