--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
          <div class="profileNameContainer">
             <h1>Shammi</h1>
          </div>
+         <div>
+            <h3>Software Developer</h3>
+         </div>
          <div class="profileLinksContainer">
             <div>
                <a href="https://github.com/shammi-udum">GitHub</a>
